--- a/lab4-fuzzy/knowledge_base.yml
+++ b/lab4-fuzzy/knowledge_base.yml
@@ -2,18 +2,21 @@ attributes:
   age:
     type: numeric
     fuzzy_sets:
-      young: [ 0, 0, 25 ]
-      middle_aged: [ 25, 35, 50 ]
-      old: [ 40, 75, 100 ]
+      young: [ 0, 0, 18, 20 ]
+      middle_aged: [ 20, 30, 50, 70 ]
+      old: [ 70, 90, 100, 120 ]
   income:
     type: numeric
     fuzzy_sets:
-      low: [ 0, 0, 40000 ]
-      medium: [ 20000, 60000, 100000 ]
-      high: [ 60000, 1000000, 1000000 ]
+      low: [ 0, 0, 20000, 30000 ]
+      medium: [ 30000, 40000, 100000, 110000 ]
+      high: [ 100000, 200000, 300000, 400000 ]
   credit_history:
-    type: logical
-    values: [ "bad", "good" ]
+    type: numeric
+    fuzzy_sets:
+      bad: [0, 0.1, 0.3, 0.5]
+      average: [0.3, 0.5, 0.7, 1]
+      good: [0.5, 0.7, 1, 1]
 rules:
   - antecedent:
       - attribute: age
@@ -21,8 +24,17 @@ rules:
       - attribute: income
         fuzzy_set: medium
       - attribute: credit_history
-        operator: eq
-        value: "good"
+        fuzzy_set: good
+    consequent:
+      attribute: credit
+      value: "approved"
+  - antecedent:
+      - attribute: age
+        fuzzy_set: middle_aged
+      - attribute: income
+        fuzzy_set: medium
+      - attribute: credit_history
+        fuzzy_set: average
     consequent:
       attribute: credit
       value: "approved"
@@ -32,8 +44,7 @@ rules:
       - attribute: income
         fuzzy_set: high
       - attribute: credit_history
-        operator: eq
-        value: "good"
+        fuzzy_set: good
     consequent:
       attribute: credit
       value: "approved"
