Knowlege base for lab4 tuned, users array moved to top

--- a/lab4-fuzzy/knowledge_base.yml
+++ b/lab4-fuzzy/knowledge_base.yml
@@ -62,8 +62,7 @@ rules:
       value: "rejected"
   - antecedent:
       - attribute: credit_history
-        operator: eq
-        value: "bad"
+        fuzzy_set: bad
     consequent:
       attribute: credit
       value: "rejected"
